BUGFIX/HCMPRE-2496 : Alignment issue fix for svg placeholder in preview

--- a/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/campaign.scss
+++ b/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/campaign.scss
@@ -798,8 +798,7 @@
 }
 .dynamic-image-component{
   max-width: 100%;
-  margin-top: -2rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: -2.5rem;
 }
 .start-header{
   color: theme(digitv2.lightTheme.primary-2) !important;
